# arch-dcmtk

dcmimage/libsrc/: CMakeLists.txt
dcmimgle/include/dcmtk/dcmimgle/: discalet.h
ofstd/libsrc/: CMakeLists.txt
